overflow-y issue

--- a/style.css
+++ b/style.css
@@ -1,186 +1,148 @@
-body {
+body, h1, h2, h3, p {
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
-section {
-  height: 100vh;
-  position: relative;
-  background: white;
+body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #f5f5f5;
 }
 
-section video {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 90%;
-  height: 65%;
-  animation-direction: reverse;
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
 }
 
-h1 {
-    margin: 0;
-    padding: 0;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    max-width: 90%;
-    text-align: center;
-    color: white;
-    font-size: 7rem;
-    font-family: sans-serif; 
-    letter-spacing: 0.2rem;
-    text-shadow: 5px 5px 5px black;
-    user-select: none;
+.navbar {
+    background-color: #5c338e;
+    color: #fff;
+    font-size: 1.25rem;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 5px 0;
 }
 
-h1 span {
-    opacity: 0;
-    display: inline-block;
-    animation: animate 1s linear forwards;
+.logo {
+    font-size: 24px;
+    font-weight: bold;
+    display: none;
 }
 
-@keyframes animate {
-  0%{
-    opacity: 0;
-    transform: rotateY(90deg);
-    filter: blur(10px);
-  }
-  100%{
-    opacity: 1;
-    transform: rotateY(0deg);
-    filter: blue(0px);
-  }
+.menu-toggle {
+  display: none;
 }
 
-h1 span:nth-child(1)
-{
-  animation-delay: .25s;
-}
-h1 span:nth-child(2)
-{
-  animation-delay: .55s;
-}
-h1 span:nth-child(3)
-{
-  animation-delay: .75s;
-}
-h1 span:nth-child(4)
-{
-  animation-delay: 1s;
-}
-h1 span:nth-child(5)
-{
-  animation-delay: 1.25s;
-}
-h1 span:nth-child(6)
-{
-  animation-delay: 1.5s;
-}
-h1 span:nth-child(7)
-{
-  animation-delay: 2s;
-}
-
-header {
-  position: absolute;
-  top: calc(30% - 50px);
-  left: 50%;
-  transform: translateX(-50%);
-  width: 85%;
-  background: white;
-  z-index: 999;
+.menu {
   display: flex;
+  list-style: none;
   justify-content: right;
 }
 
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: center;
-  padding: 0;
-  margin-right: 1px;
+.menu li {
+  margin-right: 20px;
 }
 
-nav ul li {
-  margin: 0 10px;
-  padding-right: 40px;
+.menu a {
+    text-decoration: none;
+    color: #fff;
+    transition: color 0.3s;
+    padding: 20px;
 }
 
-nav ul li a {
-  text-decoration: none;
-  color: teal;
-  font-weight: bold;
-  font-family: sans-serif;
-  font-size: 20px;
-  padding: 10px;
+.menu a:hover {
+  color: #ad4ad5;
 }
 
-nav ul li a:hover {
-  background-color: white;
-  color: orange;
-  border-radius: 100%;
-}
-
-@media (max-width: 768px) {
-  h1 {
-    font-size: 3rem; /* Adjust the value as needed */
-    transform: translate(-50%, -50%);
-    left: 50%;
-    max-width: 100%;
+.hero {
+    color: #804FB3;
+    height: 28rem;
+    font-weight: 800;
     text-align: center;
-    user-select: none;
-  }
-  section video {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-  }
-  header {
-    display: none;
-  }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 100px 0 20px;
+    overflow: hidden;
 }
 
-.about {
-  margin: 0;
-  padding: 20px;
+.hero h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+
+.hero p {
+  font-size: 2.5rem;
+}
+
+.clouds {
   position: absolute;
-  top: calc(55% + 10px + 50px); /* Adjust the value as needed */
-  left: 50%;
-  transform: translate(-50%, -50%) translateX(20px);
+  top: 0;
+  left: 0;
+  width: 6500px;
+  height: 100%;
+  background: url('/media/clouds.png');
+  opacity: 0.4;
+  animation: scrollClouds 320s linear infinite;
+
+}
+
+@keyframes scrollClouds {
+    0%, 100% {
+      transform: translateX(0);
+    }
+    50% {
+      transform: translateX(-3250px);
+    }
+}
+
+footer {
+  background-color: #471a80;
+  color: #fff;
+  text-align: center;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  max-width: 70%;
-  text-align: left;
-  color: white;
-  font-size: 1rem;
-  font-family: sans-serif; 
-  font-weight: 900;
-  letter-spacing: 0.2rem;
-  text-shadow: 3px 2px 1px black;
-  user-select: none;
-  display: none;
-  z-index: 2; /* Ensure a higher value than the section video */
+  padding: 20px 0;
+  box-sizing: border-box;
 }
 
-
-section.active .about {
-  display: block;
+.social-links {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 10px;
 }
 
-section.active h1 {
-  display: none;
-}
-
-.about p {
-  margin: 1rem 0;
-}
-
-.youtube-wrapper {
-  max-width: 100%;
-  overflow: hidden;
+.social-links li {
   display: inline-block;
-  margin-bottom: 20px;
+  margin-right: 10px;
+}
+
+.social-links a {
+    color: #fff;
+    font-size: 24px;
+}
+
+@media screen and (max-width: 766px) {
+    .menu {
+        display: none;
+    }
+
+    .logo {
+        display: block;
+    }
+
+    .menu-toggle {
+      display: block;
+      cursor: pointer;
+    }
+
+    html, body, section {
+      overflow-y: hidden;
+  }
 }
